Create title and buttons on homepage
Addition of h1 and buttons on HTML.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Rock, Paper Scissors!</h1><br>
+    <button>Rock</button><button>Paper</button><button>Scissors</button>
     <script src="script.js"></script>
 </body>
 </html>
