Fix typos in index and add test js file
Typos regarding Scissors button class fixed. Also created test JS file
that index is now referencing.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Rock, Paper Scissors!</h1><br>
-    <button>Rock</button><button>Paper</button><button>Scissors</button>
-    <script src="script.js"></script>
+    <h1>Rock, Paper, Scissors!</h1><br>
+    <button class="rock">Rock</button><button class="paper">Paper</button><button class="scissors">Scissors</button>
+    <script src="scriptTest.js"></script>
 </body>
 </html>
