Rework index and script.js
Complete redo of the code: current code assigns playerChoice upon click
of button and runs playRound. Records result in the console but does
not keep a win count.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Rock, Paper, Scissors!</h1><br>
-    <button class="rock">Rock</button><button class="paper">Paper</button><button class="scissors">Scissors</button>
-    <script src="scriptTest.js"></script>
+    <h1>Rock, Paper, Scissors!</h1>
+    <h2>Make your selection:</h2>
+    <button class="btn rock">Rock</button><button class="btn paper">Paper</button><button class="btn scissors">Scissors</button>
+    <script src="script.js"></script>
 </body>
 </html>
