--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <h1>Rock, Paper, Scissors!</h1>
     <h2>Make your selection:</h2>
     <button class="btn rock">Rock</button><button class="btn paper">Paper</button><button class="btn scissors">Scissors</button>
-    <div id="container"></div>
+    <div id="container">
+        <div id="score"></div>
+        <div id="result"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
